Fix formatting on mobile

--- a/scovid19/static/css/styles.css
+++ b/scovid19/static/css/styles.css
@@ -4,12 +4,11 @@
 }
 
 #darkToggle {
-	width: 100%;
 	cursor: pointer;
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
-	margin-bottom: 0.5rem;
+	margin-bottom: -25px;
 }
 
 @media only screen and (min-width: 1000px) {
